--- a/clients/package.json
+++ b/clients/package.json
@@ -31,6 +31,7 @@
     "react-scrollable-feed": "^1.3.1",
     "react-toastify": "^9.1.1",
     "react-transition-group": "^4.4.5",
+    "serve": "^14.2.4",
     "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
