--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rituldani.github.io/Chat_API/",
+  "homepage": "https://rituldani.github.io/chat-bot",
   "name": "chat-box",
   "private": true,
   "version": "0.0.0",
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0"
@@ -28,6 +27,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "vite": "^6.1.0"
   }
