--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://rituldani.github.io/chat-bot",
-  "name": "chat-box",
+  "name": "chat-bot",
   "private": true,
   "version": "0.0.0",
   "type": "module",
